--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Flask==2.0.2
+Flask-Admin==1.5.3
 Peewee==3.14.8
 pymysql==1.0.2
 Flask-HTTPAuth==4.5.0
+WTForms==2.3.1
+wtf-peewee==3.0.2
+cryptography==36.0.0
