--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "se-front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.0",
@@ -15,6 +16,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
