--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "se-front",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "http://shlyahdomrii.tech",
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.0",
@@ -15,9 +15,11 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
+    "netlify-identity-widget": "^1.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
