--- a/front/package.json
+++ b/front/package.json
@@ -11,11 +11,12 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/material": "^5.2.3",
     "@mui/x-data-grid": "^5.0.1",
+    "@react-pdf/renderer": "^2.0.21",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
