Update: * added admin server authorization; * admin server is now deployable; * added deployment of front-end; * updated ingress rules; * Flask downgraded due to dependency issue;

--- a/deploy/ingress.yml
+++ b/deploy/ingress.yml
@@ -22,3 +22,17 @@ spec:
             name: gotrue
             port:
               number: 8080
+      - path: /()(admin/?.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: admin
+            port:
+              number: 80
+      - path: /(|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: front
+            port:
+              number: 8080
