--- a/deploy/admin.yml
+++ b/deploy/admin.yml
@@ -1,33 +1,33 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: chief
+  name: admin
 spec:
   ports:
   - name: http
     port: 80
     targetPort: 5000
   selector:
-    app: chief
+    app: admin
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chief
+  name: admin
 spec:
   selector:
     matchLabels:
-      app: chief
+      app: admin
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: chief
+        app: admin
     spec:
       containers:
       - image: docker.shlyahdomrii.tech/back:latest
-        name: chief
+        name: admin
         resources:
           limits:
             memory: 128Mi
@@ -37,16 +37,24 @@ spec:
             cpu: 100m
         env:
         - name: FLASK_APP
-          value: back.chief
+          value: back.admin
         - name: DATABASE
           valueFrom:
             secretKeyRef:
-              name: chief
+              name: admin
               key: DATABASE
-        - name: GOTRUE_URL
-          value: http://gotrue:8080
-        - name: PAYMENT_SERVICE
-          value: http://payment
+        - name: BASIC_AUTH_USERNAME
+          value: admin
+        - name: BASIC_AUTH_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: admin
+              key: PASSWORD
+        - name: SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: admin
+              key: SECRET_KEY
         ports:
         - name: http
           containerPort: 5000
@@ -56,7 +64,9 @@ spec:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: chief
+  name: admin
 type: Opaque
 data:
-  DATABASE: bXlzcWwrcG9vbDovL2NoaWVmOkNoaWVmRGV2UEAkJEBteXNxbDozMzA2L2FpcnBvcnQ=
+  DATABASE: bXlzcWwrcG9vbDovL2FkbWluOkFkbWluRGV2UEAkJEBteXNxbDozMzA2L2FpcnBvcnQ=
+  PASSWORD: QWRtaW5QQCQkdzByZA==
+  SECRET_KEY: cmhiYSlKNC0uWzV6KSQ6LXR9Z0J2VC5RW3I3WQ==
