--- a/deploy/gotrue.yml
+++ b/deploy/gotrue.yml
@@ -69,6 +69,8 @@ spec:
           value: noreply@shlyahdomrii.tech
         - name: GOTRUE_LOG_LEVEL
           value: DEBUG
+        - name: GOTRUE_MAILER_AUTOCONFIRM
+          value: 'true'
         ports:
         - name: http
           containerPort: 8080
