Update: * fixed issue with mail sending by gotrue; * admin deps separated since Flask-Admin has broken deps and should be rolled back to Flask 1.0.2; * updated deployment of payment service;

--- a/deploy/admin.yml
+++ b/deploy/admin.yml
@@ -26,7 +26,7 @@ spec:
         app: admin
     spec:
       containers:
-      - image: docker.shlyahdomrii.tech/back:latest
+      - image: docker.shlyahdomrii.tech/admin:latest
         name: admin
         resources:
           limits:
