--- a/deploy/ingress.yml
+++ b/deploy/ingress.yml
@@ -22,6 +22,13 @@ spec:
             name: gotrue
             port:
               number: 8080
+      - path: /api/payment(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: payment
+            port:
+              number: 80
       - path: /()(admin/?.*)
         pathType: Prefix
         backend:
