--- a/deploy/chief.yml
+++ b/deploy/chief.yml
@@ -47,6 +47,11 @@ spec:
           value: http://gotrue:8080
         - name: PAYMENT_SERVICE
           value: http://payment
+        - name: GOTRUE_ADMIN_KEY
+          valueFrom:
+            secretKeyRef:
+              name: gotrue
+              key: OPERATOR_TOKEN
         ports:
         - name: http
           containerPort: 5000
